tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_33.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (+ 1223);
               y := (1223 MOD (((- z) * x) + (+ 1)));
               p := (1223 < (+ 1));
               x := ((((y DIV z) MOD 1223) DIV 200) DIV ((200 MOD 2) + z));
               z := 0;
               r := ((p & q) OR (0 # (x - 2)));
               p := q;
  (* error *)  x := 200;
               r := q;
               z := 0
END Test18.